--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,9 @@ jobs:
       #----------------------------------------------
       #          install and run linters      
       #----------------------------------------------
-      - run: python -m pip install black flake8 isort
+      - run: python -m pip install black
       - run: |
-          flake8 .
           black . --check
-          isort .
   test:
     needs: linting
     strategy:
