--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ typer = {extras = ["all"], version = "^0.3.2"}
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 mkdocs-material = "^7.2.0"
+black = "^21.7b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
