--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,7 +79,7 @@ jobs:
       #    run test suite and output coverage file   
       #----------------------------------------------
       - name: Test with pytest
-        run: poetry run pytest --cov=<project-dir> --cov-report=xml
+        run: poetry run pytest --cov=beastiary --cov-report=xml
       #----------------------------------------------
       #             upload coverage stats              
       # (requires CODECOV_TOKEN in repository secrets)   
