:art: update python version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 beastiary = "beastiary.main:app"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6.2,<4.0"
 typer = {extras = ["all"], version = "^0.3.2"}
 
 [tool.poetry.dev-dependencies]
