--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ typer = {extras = ["all"], version = "^0.3.2"}
 pytest = "^5.2"
 mkdocs-material = "^7.2.0"
 black = "^21.7b0"
+pytest-cov = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
