:art: setting up layout for move from version 1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ beastiary = "beastiary.main:app"
 [tool.poetry.dependencies]
 python = ">=3.6.2,<4.0"
 typer = {extras = ["all"], version = "^0.3.2"}
+fastapi = {extras = ["all"], version = "^0.67.0"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
