--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest = "^5.2"
 mkdocs-material = "^7.2.0"
 black = "^21.7b0"
 pytest-cov = "^2.12.1"
+pre-commit = "^2.13.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
