--- a/frontend/.env
+++ b/frontend/.env
@@ -5,6 +5,6 @@ VUE_APP_DOMAIN_DEV="http://127.0.0.1:5000"
 VUE_APP_DOMAIN_STAG=""
 VUE_APP_DOMAIN_PROD=""
 VUE_APP_NAME="Beastiary"
-VUE_APP_ENV=production
+VUE_APP_ENV=dev
 # VUE_APP_ENV=staging
 # VUE_APP_ENV=production
