--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,8 @@ mkdocs-material = "^7.2.0"
 black = "^21.7b0"
 pytest-cov = "^2.12.1"
 pre-commit = "^2.13.0"
+mypy = "^0.910"
+sqlalchemy-stubs = "^0.4"
 
 
 [build-system]
