:bug: fix workflow bug

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
       #    run mypy   
       #----------------------------------------------
       - name: Test with mypy
-        run: run poetry run mypy --install-types && poetry run mypy .
+        run: poetry run mypy --install-types && poetry run mypy .
         working-directory: ./backend
       #----------------------------------------------
       #    run test suite and output coverage file   
