--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@types/mathjs": "^9.4.2",
     "axios": "^0.18.0",
     "core-js": "^3.4.3",
+    "mathjs": "^9.4.4",
     "register-service-worker": "^1.0.0",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^2.1.7",
