--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - tutorial/index.md
   - tutorial/first-steps.md
   - tutorial/logs-from-the-command-line.md
+  - tutorial/remote-beastiary.md
   - tutorial/google-colab.md
   
 markdown_extensions:
