--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "axios": "^0.18.0",
     "core-js": "^3.4.3",
     "mathjs": "^9.4.4",
+    "plotly.js": "^2.5.0",
     "register-service-worker": "^1.0.0",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^2.1.7",
     "vue": "^2.5.22",
     "vue-class-component": "^6.0.0",
+    "vue-plotly": "^1.1.0",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
     "vuetify": "^2.4.0",
