--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
   - tutorial/logs-from-the-command-line.md
   - tutorial/remote-beastiary.md
   - tutorial/google-colab.md
+  - tutorial/running-in-the-background.md
   
 markdown_extensions:
 - toc:
