--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
   - tutorial/google-colab.md
   - tutorial/running-in-the-background.md
 - Plots:
+  - plots/joint-marginal.md
   - plots/Cumulative-ESS.md
   - plots/parallel-coordinates.md
 - Design and Implementation: design.md
