--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve",
     "build": "VUE_APP_ENV=production vue-cli-service build",
+    "analyze": "ANALYZE=true npm run build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -45,6 +46,7 @@
     "vue-cli-plugin-vuetify": "~2.4.2",
     "vue-template-compiler": "^2.5.22",
     "vuetify-loader": "^1.7.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "worker-loader": "^3.0.8"
   },
   "postcss": {
